--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "CommandServiceEndpoint": "http://localhost:6000/api/command/platform"
 }
