Command service endpoint added  production configs

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,10 @@
 {
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CommandServiceEndpoint": "http://commands-clusterip-srv:80/api/command/platform"
 }
